Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19774

Assertion `sec.se c() <= 0x7FFFFFFFL' failed in Item_func_from_unixtime::get_date

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.7
    • Temporal Types
    • None

    Description

      SELECT FROM_UNIXTIME( LEAST( 3696610869, NULL ) );
      

      10.4 bff7cf9d

      mysqld: /data/src/10.4/sql/item_timefunc.cc:1936: virtual bool Item_func_from_unixtime::get_date(THD*, MYSQL_TIME*, date_mode_t): Assertion `sec.sec() <= 0x7FFFFFFFL' failed.
      190616 22:43:57 [ERROR] mysqld got signal 6 ;
       
      #6  0x00007ff8930fbe67 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x561e40bf8ba3 "sec.sec() <= 0x7FFFFFFFL", file=file@entry=0x561e40bf8708 "/data/src/10.4/sql/item_timefunc.cc", line=line@entry=1936, function=function@entry=0x561e40bf9f20 <Item_func_from_unixtime::get_date(THD*, st_mysql_time*, date_mode_t)::__PRETTY_FUNCTION__> "virtual bool Item_func_from_unixtime::get_date(THD*, MYSQL_TIME*, date_mode_t)") at assert.c:92
      #7  0x00007ff8930fbf12 in __GI___assert_fail (assertion=0x561e40bf8ba3 "sec.sec() <= 0x7FFFFFFFL", file=0x561e40bf8708 "/data/src/10.4/sql/item_timefunc.cc", line=1936, function=0x561e40bf9f20 <Item_func_from_unixtime::get_date(THD*, st_mysql_time*, date_mode_t)::__PRETTY_FUNCTION__> "virtual bool Item_func_from_unixtime::get_date(THD*, MYSQL_TIME*, date_mode_t)") at assert.c:101
      #8  0x0000561e40283267 in Item_func_from_unixtime::get_date (this=0x7ff87c013aa8, thd=0x7ff87c000b00, ltime=0x7ff88d2cbae8, fuzzydate=...) at /data/src/10.4/sql/item_timefunc.cc:1936
      #9  0x0000561e40055905 in Type_handler::Item_send_datetime (this=0x561e414d6b40 <type_handler_datetime2>, item=0x7ff87c013aa8, protocol=0x7ff87c0010c8, buf=0x7ff88d2cbae0) at /data/src/10.4/sql/sql_type.cc:6822
      #10 0x0000561e40061f00 in Type_handler_datetime_common::Item_send (this=0x561e414d6b40 <type_handler_datetime2>, item=0x7ff87c013aa8, protocol=0x7ff87c0010c8, buf=0x7ff88d2cbae0) at /data/src/10.4/sql/sql_type.h:5464
      #11 0x0000561e3fd30f1e in Item::send (this=0x7ff87c013aa8, protocol=0x7ff87c0010c8, buffer=0x7ff88d2cbae0) at /data/src/10.4/sql/item.h:1035
      #12 0x0000561e3fd2bc1f in Protocol::send_result_set_row (this=0x7ff87c0010c8, row_items=0x7ff87c013470) at /data/src/10.4/sql/protocol.cc:1024
      #13 0x0000561e3fdd8e7e in select_send::send_data (this=0x7ff87c014490, items=...) at /data/src/10.4/sql/sql_class.cc:3002
      #14 0x0000561e3fe96bbd in JOIN::exec_inner (this=0x7ff87c0144b8) at /data/src/10.4/sql/sql_select.cc:4259
      #15 0x0000561e3fe964d8 in JOIN::exec (this=0x7ff87c0144b8) at /data/src/10.4/sql/sql_select.cc:4173
      #16 0x0000561e3fe97b7d in mysql_select (thd=0x7ff87c000b00, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7ff87c014490, unit=0x7ff87c004a28, select_lex=0x7ff87c013328) at /data/src/10.4/sql/sql_select.cc:4605
      #17 0x0000561e3fe8816c in handle_select (thd=0x7ff87c000b00, lex=0x7ff87c004960, result=0x7ff87c014490, setup_tables_done_option=0) at /data/src/10.4/sql/sql_select.cc:425
      #18 0x0000561e3fe51d1c in execute_sqlcom_select (thd=0x7ff87c000b00, all_tables=0x0) at /data/src/10.4/sql/sql_parse.cc:6335
      #19 0x0000561e3fe47bd6 in mysql_execute_command (thd=0x7ff87c000b00) at /data/src/10.4/sql/sql_parse.cc:3884
      #20 0x0000561e3fe55ab1 in mysql_parse (thd=0x7ff87c000b00, rawbuf=0x7ff87c013260 "SELECT FROM_UNIXTIME( LEAST( 3696610869, NULL ) )", length=49, parser_state=0x7ff88d2cd180, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:7887
      #21 0x0000561e3fe41dcd in dispatch_command (command=COM_QUERY, thd=0x7ff87c000b00, packet=0x7ff87c008311 "", packet_length=49, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:1829
      #22 0x0000561e3fe4058b in do_command (thd=0x7ff87c000b00) at /data/src/10.4/sql/sql_parse.cc:1362
      #23 0x0000561e3ffb971b in do_handle_one_connection (connect=0x561e43a15010) at /data/src/10.4/sql/sql_connect.cc:1403
      #24 0x0000561e3ffb947f in handle_one_connection (arg=0x561e43a15010) at /data/src/10.4/sql/sql_connect.cc:1306
      #25 0x0000561e408e3d73 in pfs_spawn_thread (arg=0x561e43a4a3a0) at /data/src/10.4/storage/perfschema/pfs.cc:1862
      #26 0x00007ff894c704a4 in start_thread (arg=0x7ff88d2ce700) at pthread_create.c:456
      #27 0x00007ff8931b8d0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
      

      Not reproducible on 10.3.
      No obvious problem on a non-debug build.

      Attachments

        Activity

          People

            bar Alexander Barkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.